# LiuZi_AlphaBeta

./: .gitignore  README.md
engine_cpp/: CMakeLists.txt  cmake_.bat  cmake_build.bat  emcmake_.bat  emcmake_build.bat
engine_cpp/src/: alphabeta.cpp  alphabeta.h  game.cpp  game.h  liuzi.cpp  vec2.h
engine_cpp/test/: test.cpp
ui_web/: index.html  package-lock.json  package.json
ui_web/public/: liuzi.js  liuzi.wasm
ui_web/src/: main.js  style.css
